# structure-tensor

./: .gitignore  .isort.cfg  .style.yapf  LICENSE  README.md  pyproject.toml  setup.py
structure_tensor/: __init__.py  multiprocessing.py  multiprocessing2.py  multiprocessing_old.py  multithreading.py  st2d.py  st3d.py  util.py
structure_tensor/cp/: __init__.py  filters.py  st3dcp.py
tests/: test_multiprocessing.py  test_structure_tensor.py
